獨立出對話角色(ITalker)

--- a/Regulus.Project.Chat.Common/Regulus.Project.Chat.Common.csproj
+++ b/Regulus.Project.Chat.Common/Regulus.Project.Chat.Common.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAccount.cs" />
+    <Compile Include="IPlayer.cs" />
     <Compile Include="ITalker.cs" />
-    <Compile Include="ITest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
