--- a/Regulus.Project.Chat.Game/Regulus.Project.Chat.Game.csproj
+++ b/Regulus.Project.Chat.Game/Regulus.Project.Chat.Game.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Center.cs" />
+    <Compile Include="INotifiable.cs" />
     <Compile Include="Talker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
