--- a/Server/config.ini
+++ b/Server/config.ini
@@ -1,8 +1,8 @@
 [Launch]
 port = 11281
-project = Regulus.Project.Chat.Game.dll
+common_path = Regulus.Project.Chat.Common.dll
+project_path = Regulus.Project.Chat.Game.dll
 project_entry = Regulus.Project.Chat.Game.Center
-protocol = Regulus.Project.Chat.Protocol.dll
-protocol_entry = Regulus.Project.Chat.Protocol
+
 
 
