--- a/Server/config.ini
+++ b/Server/config.ini
@@ -1,8 +1,10 @@
 [Launch]
 port = 11281
 common_path = Regulus.Project.Chat.Common.dll
+common_namespace = Regulus.Project.Chat.Common
 project_path = Regulus.Project.Chat.Game.dll
 project_entry = Regulus.Project.Chat.Game.Center
+rudp = true
 
 
 
